# mini-backtester

./: .gitignore  Cargo.toml  README.md  TODO.md
compound_growth/: Cargo.toml
compound_growth/src/: lib.rs
ema/: Cargo.toml
ema/src/: lib.rs
moving_avg/: Cargo.toml
moving_avg/src/: lib.rs
return_quant/: Cargo.toml
return_quant/src/: lib.rs
sharp_ratio/: Cargo.toml
sharp_ratio/src/: lib.rs
src/: backtest.rs  data.rs  lib.rs  main.rs  metrics.rs  strategy.rs  trade_model.rs  types.rs
src/strategy/: atr.rs  atr_breakout.rs  ema_cross.rs  mean_reversion.rs  momentum.rs  sma_cross.rs  volatility_targeting.rs
